--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -6,8 +6,8 @@
    <md-icon>more_vert</md-icon>
 </button>
   <md-menu #menu="mdMenu">
-    <button md-menu-item> Chat </button>
-    <button md-menu-item> Menu 2 </button>
+    <button md-menu-item [routerLink]="['/playground']"> Playground </button>
+    <button md-menu-item [routerLink]="['/budget']"> Budget </button>
     <button md-menu-item> Menu 3 </button>
     <button md-menu-item disabled> Sign Out </button>
 </md-menu>
