--- a/src/app/playground/playground.component.html
+++ b/src/app/playground/playground.component.html
@@ -1,4 +1,6 @@
-  <h2>Add new</h2>
+Timer: {{currentTime}}
+<input type="text" [(ngModel)]="currentTime" />
+<h2>Add new</h2>
   <input type="text" placeholder="First name" #firstName />
   <input type="text" placeholder="Last name" [(ngModel)]="lastName" />
   <input type="submit" value="Add user" (click)="newUser(firstName.value)" />
