--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,6 +1,6 @@
 <div class="col-md-6 col-md-offset-3">
   <div class="alert alert-info">
-    Username: test<br />
+    Username: test
     Password: test
   </div>
   <h2>Login</h2>
