--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -14,5 +14,5 @@
     <span>flatMate - playground</span>
     </span>
   <span class="fill-remaining-space"></span>
-  <span><md-card>User: log in / log out</md-card></span>
+  <span><md-card><button (click)="logout()">Logout</button></md-card></span>
 </md-toolbar>
