--- a/src/app/playground/playground.component.html
+++ b/src/app/playground/playground.component.html
@@ -1,5 +1,5 @@
 Timer: {{currentTime}}
-<button (click)="toggleTimer()">Toggle Timer!</button>
+<button (click)="toggleTimer()">Toggle Timer!</button><button (click)="toggleSubscription()">Toggle Subscription!</button>
 <h2>Add new</h2>
   <input type="text" placeholder="First name" #firstName />
   <input type="text" placeholder="Last name" [(ngModel)]="lastName" />
